--- a/style.css
+++ b/style.css
@@ -79,7 +79,8 @@ div .flexTitle{
     display: flex;
     flex-direction: column;
     min-height: 88px;
-    width: max-content;
+    /*width: max-content;*/
+    width: 14em;
 }
 
 div .compTitles{
@@ -92,6 +93,7 @@ div .compName{
     color: hsl(180, 29%, 50%);
     padding-right: 1%;
     font-weight: 600;
+    margin-right: 7px;
 }
 /*Settings for Company Name*/
 
@@ -102,7 +104,7 @@ div .info{
     color: white;
     padding: 5px;
     font-weight: 700;
-    
+    margin-right: 7px;
 }
 
 div .new{
@@ -194,7 +196,7 @@ div .posDetails{
 /*Settings for Tools and Skills*/
 
 /*Settings for responsive*/
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 450px) {
     .job{
         margin-top: 20%;
         flex-wrap: wrap;
