--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ div .posDetails{
 }
 /*Settings for Tools and Skills*/
 
-/*Settings for responsive*/
+/*Settings for responsivness of main containers*/
 @media screen and (max-width: 450px) {
     .job{
         margin-top: 20%;
@@ -242,3 +242,89 @@ div .posDetails{
     }
 }
 /*Settings for responsive*/
+
+/*Beyond this lies settings for pop up*/
+/*Settings for popup Container*/
+.popupContainer{
+    position: fixed;
+    display: flex;
+    top: 0;
+    z-index: 1;/*Stacking Property*/
+    background-color: hsla(180, 25%, 69%, 0.39);
+    width:100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    font-family: 'League Spartan', serif;
+}
+/*Settings for popup Container*/
+
+/*Settings for pop up white container*/
+.popupInner{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    background-color: white;
+    border-radius: 5px;
+    width: 20em;
+    height: 20em;
+    justify-content: center;
+    align-items: center;
+}
+
+.popJob{
+    margin: 2%;
+}
+
+.pop{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    min-height: 88px;
+    width: 17em;
+}
+
+.listpop{
+    display: flex;
+    flex-direction: row;
+}
+
+.lip{
+    list-style-type: none;
+    margin-left: 5px;
+}
+
+.flexToolspop{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.btnSet{
+    font-size: 12px;
+    color: hsl(180, 29%, 50%);
+    background-color: hsl(180, 31%, 95%);
+    font-weight: 600;
+    border: none;
+    padding: 6px;
+    border-radius: 6px;
+}
+
+.close{
+    margin-top: 5px;
+    background-color: rgb(145, 2, 2);
+    color: white;
+    border: none;
+    padding: 2%;
+    font-family: 'League Spartan', serif;
+    border-radius: 3px;
+}
+
+.close:hover{
+    color: rgb(145, 2, 2);
+    background-color: white;
+    border: 1px solid rgb(145, 2, 2);
+}
+/*Settings for pop Container */
